--- a/javascript/郵便番号からの住所補完.md
+++ b/javascript/郵便番号からの住所補完.md
@@ -52,5 +52,7 @@ document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
 
 <img width="760" alt="スクリーンショット 2024-05-08 21 38 40" src="https://github.com/cuon-kakimoto/readme/assets/24713957/62f49f62-db15-47f8-9b56-3c6f9b2c3f7f">
 
+
   
+<img width="319" alt="image" src="https://github.com/user-attachments/assets/9030b064-3527-40a0-b664-e4cdd5673557" />
 
